fix z-index of god-says

--- a/src/styles.css
+++ b/src/styles.css
@@ -182,6 +182,8 @@
   text-align: center;
   position: absolute;
   right: 0;
+  z-index: 1;
+
   /* margin-left: 75%; */
   /* left: 0; */
 }
